[metadata]
name = rbv
version = attr: rbv.__version__
author = "Marion Le Bras"
author_email = "marion.lebras@nist.gov"
license_file = LICENSE.txt

description = File structure validation for humans
long_description = file: README.md
long_description_content_type = md

; the url metadata is shown on the PyPi page. Final value must be public
url = https://dse-nist.ipages.nist.gov/rules-based-validator
